@@ -25,6 +25,7 @@
  * Removed StationaryCovarianceModel
  * CovarianceModel.computeAsScalar allows scalars
  * Swapped SimulatedAnnealingLHS constructor SpaceFilling/TemperatureProfile arguments
+ * Added EfficientGlobalOptimization::getKrigingResult, gets the updated version of the KrigingResult passed to the constructor
 
 === Documentation ===
  * Fixed example and plot of Kolmogorov statistics.
